--- a/public/package.json
+++ b/public/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "vue": "^2.2.2",
-    "vue-axios": "^2.0.1"
+    "vue-axios": "^2.0.1",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
