--- a/public/package.json
+++ b/public/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "underscore": "^1.8.3",
     "vue": "^2.2.2",
     "vue-axios": "^2.0.1",
     "vuex": "^2.2.1"
