--- a/public/package.json
+++ b/public/package.json
@@ -14,6 +14,7 @@
     "underscore": "^1.8.3",
     "vue": "^2.2.2",
     "vue-axios": "^2.0.1",
+    "vue-datepicker": "^1.3.0",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
